--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.css",
+                            "node_modules/aos/dist/aos.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "node_modules/sweetalert2/dist/sweetalert2.min.css"
                         ],
