--- a/package.json
+++ b/package.json
@@ -1,67 +1,69 @@
 {
-  "name": "consultorio-app",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~9.1.1",
-    "@angular/cdk": "^9.2.2",
-    "@angular/common": "~9.1.1",
-    "@angular/compiler": "~9.1.1",
-    "@angular/core": "~9.1.1",
-    "@angular/forms": "~9.1.1",
-    "@angular/localize": "~9.1.1",
-    "@angular/material": "^9.2.2",
-    "@angular/material-moment-adapter": "^9.2.2",
-    "@angular/platform-browser": "~9.1.1",
-    "@angular/platform-browser-dynamic": "~9.1.1",
-    "@angular/router": "~9.1.1",
-    "@fortawesome/angular-fontawesome": "^0.6.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-regular-svg-icons": "^5.13.1",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
-    "angular-utils-pagination": "^0.11.1",
-    "bootstrap": "^4.5.0",
-    "jquery": "^3.4.1",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.28",
-    "ng2-order-pipe": "^0.1.5",
-    "ng2-search-filter": "^0.5.1",
-    "ngx-order-pipe": "^2.0.4",
-    "ngx-pagination": "^5.0.0",
-    "popper.js": "^1.16.1",
-    "rxjs": "~6.5.4",
-    "sweetalert2": "^9.10.12",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.5",
-    "@angular/cli": "~9.1.1",
-    "@angular/compiler-cli": "~9.1.1",
-    "@angular/language-service": "~9.1.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
-  }
+    "name": "consultorio-app",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~9.1.1",
+        "@angular/cdk": "^9.2.2",
+        "@angular/common": "~9.1.1",
+        "@angular/compiler": "~9.1.1",
+        "@angular/core": "~9.1.1",
+        "@angular/forms": "~9.1.1",
+        "@angular/localize": "~9.1.1",
+        "@angular/material": "^9.2.2",
+        "@angular/material-moment-adapter": "^9.2.2",
+        "@angular/platform-browser": "~9.1.1",
+        "@angular/platform-browser-dynamic": "~9.1.1",
+        "@angular/router": "~9.1.1",
+        "@fortawesome/angular-fontawesome": "^0.6.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.29",
+        "@fortawesome/free-brands-svg-icons": "^5.13.1",
+        "@fortawesome/free-regular-svg-icons": "^5.13.1",
+        "@fortawesome/free-solid-svg-icons": "^5.13.1",
+        "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+        "angular-utils-pagination": "^0.11.1",
+        "aos": "^2.3.4",
+        "bootstrap": "^4.5.0",
+        "jquery": "^3.4.1",
+        "moment": "^2.24.0",
+        "moment-timezone": "^0.5.28",
+        "ng2-order-pipe": "^0.1.5",
+        "ng2-search-filter": "^0.5.1",
+        "ngx-order-pipe": "^2.0.4",
+        "ngx-pagination": "^5.0.0",
+        "popper.js": "^1.16.1",
+        "rxjs": "~6.5.4",
+        "sweetalert2": "^9.10.12",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.10.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^0.901.5",
+        "@angular/cli": "~9.1.1",
+        "@angular/compiler-cli": "~9.1.1",
+        "@angular/language-service": "~9.1.1",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^5.1.2",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.4.1",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~2.1.0",
+        "karma-jasmine": "~3.0.1",
+        "karma-jasmine-html-reporter": "^1.4.2",
+        "protractor": "~5.4.3",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "typescript": "~3.8.3"
+    }
 }
