--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "jquery": "^3.4.1",
         "moment": "^2.24.0",
         "moment-timezone": "^0.5.28",
+        "ng-recaptcha": "^6.1.0",
         "ng2-order-pipe": "^0.1.5",
         "ng2-search-filter": "^0.5.1",
         "ngx-order-pipe": "^2.0.4",
