--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "ng-recaptcha": "^6.1.0",
         "ng2-order-pipe": "^0.1.5",
         "ng2-search-filter": "^0.5.1",
+        "ngx-material-timepicker": "^5.5.3",
         "ngx-order-pipe": "^2.0.4",
         "ngx-pagination": "^5.0.0",
         "popper.js": "^1.16.1",
